--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
+env/
+venv/
+ENV/
 build/
 develop-eggs/
 dist/
@@ -19,11 +23,23 @@ wheels/
 .installed.cfg
 *.egg
 
-venv/
-ENV/
-env/
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+test_output*.txt
+temp_*.csv
 
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Environment
 .env
+.env.local
 .venv
 
 *.log
