--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ aiofiles==23.2.1
 sse-starlette==2.0.0
 httpx==0.26.0
 alembic==1.13.1
+pytest==8.0.0
+pytest-asyncio==0.23.5
+pytest-mock==3.12.0
+requests==2.31.0
